# web-api-with-axum

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs  organization.rs  organization_users.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220523_220125_create_users_table.rs  m20220524_234921_create_organizations_table.rs  m20220528_185620_create_organization_users_table.rs
src/: http.rs  main.rs
src/commands/: migrate.rs  mod.rs  server.rs
src/http/: diagnostics.rs  organizations.rs  users.rs  webhooks.rs  websocket.rs
