[package]
name = "web-api-with-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0", features = ["util"] }
futures = "0"
axum-macros = "0"
zenv = { git = "https://github.com/numToStr/zenv", branch = "master" }
anyhow = { git = "https://github.com/dtolnay/anyhow", branch = "master" }

entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]

[dependencies.axum]
git = "https://github.com/tokio-rs/axum"
branch = "main"
features = ["ws"]

[dependencies.serde]
# git = "https://github.com/serde-rs/serde"
version = "1"
features = ["derive"]
# branch = "master"
# tag = "v1.0.137"

[dependencies.serde_json]
git = "https://github.com/serde-rs/json"
branch = "master"

[dependencies.sea-orm]
# git = "https://github.com/SeaQL/sea-orm"
version = "0"
features = ["runtime-tokio-native-tls", "sqlx-postgres"]
# branch = "master"
